--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">AndroidSummarize</string>
     <string name="activity_fragment">FragmentStack</string>
+
+    <string name="activity_fragment_ax">AndroidX</string>
+
     <string name="fragment_goto_first">第一个Fragment</string>
     <string name="fragment_goto_second">第二个Fragment</string>
     <string name="fragment_goto_third">第三个Fragment</string>
