--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">AndroidSummarize</string>
     <string name="activity_fragment">FragmentStack</string>
     <string name="activity_event">EventDispatch</string>
+    <string name="activity_okhttp">OkHttp</string>
 
     <string name="activity_fragment_ax">AndroidX Default</string>
     <string name="activity_fragment_navigation">AndroidX Navigation</string>
